--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,10 @@
 	</modules>
 
 	<properties>
+		<skipTests>true</skipTests>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-
 		<curator-framework.version>4.0.1</curator-framework.version>
 		<zookeeper.version>3.4.13</zookeeper.version>
 		<dubbo.starter.version>0.2.0</dubbo.starter.version>
